--- a/res/layout/activity_war_field.xml
+++ b/res/layout/activity_war_field.xml
@@ -9,8 +9,23 @@
     tools:context=".WarField" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#aaa"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
+    <com.bogdanov.Graphics
+    	android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:id="@+id/game_view"
+        android:layout_gravity="center"   
+        android:background="#000"/>
+    </LinearLayout>
 
 </RelativeLayout>
